--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "covid19_tracking_updates",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/arunsinghsnd/covid19-tracking-updates.git",
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,8 +20,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,7 +43,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "gh-pages": "^2.2.0"
+    "eslint-plugin-react-hooks": "^2.5.1"
   }
 }
